--- a/scipy/basic/Makefile
+++ b/scipy/basic/Makefile
@@ -7,7 +7,8 @@
 SLIDES= session1.pdf \
 	session2.pdf \
 	session3.pdf \
-	session4.pdf
+	session4.pdf \
+  mlab.pdf
 
 all: 	$(SLIDES) quickref.pdf
 
@@ -16,6 +17,3 @@ cleanall:
 
 clean:
 	rm -f *.log *.bak *.aux *.bbl *.blg *.idx *.toc *.out *~ *.vrb *.nav *.snm
-
-
-
