Add slides on IPython notebooks.

--- a/scipy/basic/Makefile
+++ b/scipy/basic/Makefile
@@ -11,7 +11,8 @@ SLIDES= intro.pdf prelims.pdf session1a.pdf \
 	session3.pdf \
 	session4.pdf \
 	exercises.pdf \
-  mlab.pdf
+  mlab.pdf \
+  notebook.pdf
 
 all: 	$(SLIDES) quickref.pdf
 
