Adding slides on OOP class attributes and misc.

--- a/advanced_python/Makefile
+++ b/advanced_python/Makefile
@@ -12,7 +12,9 @@ SLIDES= 1_intro.pdf \
         6_practice_functions.pdf \
 				7_oop_basics.pdf \
 				8_oop_inheritance.pdf \
-				9_oop_containership.pdf
+				9_oop_containership.pdf \
+				10_oop_classattr.pdf \
+				11_oop_misc.pdf
 
 all:    $(SLIDES)
 
